@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-18 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Make the C/C++ CloudI API include all processing time in the
+      poll timeout value, when a poll timeout value is provided
+
 2014-01-17 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add cloudi_service_quorum tests
